@@ -20,7 +20,7 @@
 ################################################################################
 
 PKG_NAME="Headphones"
-PKG_VERSION="537126b"
+PKG_VERSION="a6532d1"
 PKG_REV="1"
 PKG_ARCH="any"
 PKG_LICENSE="OSS"
