@@ -20,7 +20,7 @@
 ################################################################################
 
 PKG_NAME="SickBeard"
-PKG_VERSION="09ddc02"
+PKG_VERSION="063a806"
 PKG_REV="1"
 PKG_ARCH="any"
 PKG_LICENSE="OSS"
